[package]
name = "demo"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
mw-rt = {path = "../mw-rt"}
mw-std = {path = "../mw-std"}
wee_alloc = "0.4.5"