[package]
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"
name = "marrow-rt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", features = ["serde"], default-features = false}
wasmi = {version = "0.6", default-features = false, features = ["core"]}
