[package]
name = "marrow-std"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = "0.2"
wasmi = { version = "0.6", default-features = false, features = ["core"]}
