[package]
name = "wstd"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
wee_alloc = "0.4.5"
lazy_static = "1.4.0"
serde = {version  = "1.0.117",features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
quote = "0.3"
syn = "0.11"