[package]
name = "actor"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mw-rt = {path = "../../mw-rt"}
mw-std = {path = "../../mw-std"}
wee_alloc = "0.4.5"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
async-trait = "0.1.42"