[package]
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
name = "native-prints"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
marrow-rt = {path = "../../marrow-rt"}
wasmi = {version = "0.6", default-features = false, features = ["core"]}
