[package]
name = "sql-demo"
version = "0.1.0"
authors = ["malefooo <784479660@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
mw-rt = {path = "../../mw-rt"}
mw-std = {path = "../../mw-std"}
wee_alloc = "0.4"
quick-protobuf = {version = "0.8.0", default-features = false}


[build-dependencies]
pb-rs = "0.9.1"
protobuf-codegen-pure = "2.18.1"