[package]
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
name = "wasm-add-print"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
cstr_core = {version = "0.2", default-features = false}
log = "0.4"
mw-log = {path = "../../mw-log"}
